--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
+
+    <!-- Sfondo scuro -->
+    <div class="overlay" id="overlay"></div>
+
+    <!-- Alert Personalizzato -->
+    <div class="custom-alert" id="customAlert">
+        <p>L'invito è esclusivo per i bambini e il numero di persone da inserire è relativo a questi ultimi.</p>
+        <button onclick="closeAlert()">OK</button>
+    </div>
+
+
+
     <!--Navbar-->
     <nav class="navbar nav2 fs-3 text-white text-center">
         <div class="container-fluid">
