--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!-- Alert Personalizzato -->
     <div class="custom-alert" id="customAlert">
-        <p>L'invito è esclusivo per i bambini e il numero di persone da inserire è relativo a questi ultimi.</p>
+        <p>I vostri bambini saranno sorvegliati da Stefania e il team del locale.</p>
         <button onclick="closeAlert()">OK</button>
     </div>
 
@@ -45,12 +45,12 @@
       <header>
     <div class="container">
         <div class="header">
-            <img src="https://pngimg.com/d/stitch_PNG23.png" alt="Stitch">
+            <img src="hellokitty.png" alt="Hello Kitty & co">
             <h1 class="text-center text-white">Buon Compleanno, Beatrice!</h1>
         </div>
         <p class="details">La nostra dolcissima Beatrice compie 8 anni e vuole festeggiare con te!</p>
-        <p class="details"><strong>Quando:</strong> 3 Gennaio 2025</p>
-        <p class="details"><strong>Alle ore:</strong> 16:30</p>
+        <p class="details"><strong>Quando?</strong> 5 Gennaio 2025</p>
+        <p class="details"><strong>Alle ore:</strong> 10:00 fino alle ore 13:00</p>
 
     <div class="nav4">
 <form
@@ -58,13 +58,13 @@
   method="POST"
 >
   <label>
-    <strong>Il vostro nome:</strong>
-    <input type="name" name="name">
+    <strong class="nav5">Il vostro nome:</strong>
+    <input type="name" name="name" class="nav6">
   
 </label>
   <label>
-    <strong>Quanti siete a partecipare?</strong>
-    <input type="name" name="name">
+    <strong class="nav5">Quanti siete a partecipare?</strong>
+    <input type="name" name="name" class="nav6">
   </label>
   <!-- your other form fields go here -->
   <div class="nav4">
@@ -80,8 +80,8 @@
      </div>
     </div>
 </div>
-    <footer style="background: #5e88bf;padding:20px;color:#fff;text-align:center;">
-        <p> Tema Stitch, creato con ❤️ per Beatrice
+    <footer style="background: #e8ccfc;padding:20px;color:#fff;text-align:center;">
+        <p> Tema Hello Kitty & co, creato con ❤️ per Beatrice
                       created by EffeDG
     </p>
       </footer>
