--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
     <!-- Alert Personalizzato -->
     <div class="custom-alert" id="customAlert">
-        <p>I vostri bambini saranno sorvegliati da Stefania e il team del locale.</p>
+        <p>In occasione della festa di Beatrice vi invitiamo ad accompagnare i bambini i quali saranno tenuti d'occhio da Stefania e il team del locale,
+        a tal proposito vi chiedo un cenno di adesione per poter organizzare il buffet.
+        </p>
         <button onclick="closeAlert()">OK</button>
     </div>
 
