--- a/index.html
+++ b/index.html
@@ -13,12 +13,7 @@
     <div class="overlay" id="overlay"></div>
 
     <!-- Alert Personalizzato -->
-    <div class="custom-alert" id="customAlert">
-        <p>In occasione della festa di Beatrice vi invitiamo ad accompagnare i bambini i quali saranno tenuti d'occhio da Stefania e il team del locale,
-        a tal proposito vi chiedo un cenno di adesione per poter organizzare il buffet.
-        </p>
-        <button onclick="closeAlert()">OK</button>
-    </div>
+  
 
 
 
@@ -60,14 +55,15 @@
   method="POST"
 >
   <label>
-    <strong class="nav5">Il vostro nome:</strong>
+    <strong class="nav5">Nome del bambino:</strong>
     <input type="name" name="name" class="nav6">
   
 </label>
-  <label>
-    <strong class="nav5">Quanti siete a partecipare?</strong>
-    <input type="name" name="name" class="nav6">
-  </label>
+<div>
+  <p class="nav7"> <strong>Vi invitiamo ad accompagnare i bambini, i quali saranno tenuti d'occhio da Stefania e dal team del locale.
+  </strong></p>
+ 
+</div>
   <!-- your other form fields go here -->
   <div class="nav4">
   <button class="nav3"type="submit">Invia</button>
