--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Sfondo scuro -->
     <div class="overlay" id="overlay"></div>
 
-    <!-- Alert Personalizzato -->
+
   
 
 
@@ -51,6 +51,26 @@
 
     <div class="nav4">
 <form
+  action="https://formspree.io/f/mvggzlgz"
+  method="POST"
+>
+  <label>
+    <strong class="nav6">Nome del bambino:</strong>
+    <input type="name" name="name"  class="nav5">
+  
+</label>
+<div>
+  <form
+  action="https://formspree.io/f/mvggzlgz"
+  method="POST"
+>
+  <label>
+    <strong class="nav6">Nome del bambino:</strong>
+    <input type="name" name="name"  class="nav5">
+  
+</label>
+<div>
+  <form
   action="https://formspree.io/f/mvggzlgz"
   method="POST"
 >
